<resources>
    <string name="app_name">Brain Up</string>
    <string name="desc1">this is an image</string>
    <string name="Title">Chapters </string>
    <string name="Sport">Sport</string>
    <string name="History">History</string>
    <string name="Culture">General Culture</string>
    <string name="title1">World War II :</string>
    <string name="text1">World War II, also known as the Second World War, was a global war that lasted from 1939 to 1945. The vast majority of the world\'s countries—including all the great powers—eventually formed two opposing military alliances: the Allies and the Axis.</string>
    <string name="question1">when does the WWII(the world war II) Started ?"</string>
    <string name="answer1">1939</string>
    <string name="answer2">1914</string>
    <string name="answer3">1945</string>
    <string name="answer4">1956</string>
    <string name="gc_question1">Berlin is the capital of which country?</string>
    <string name="gc_answer1_1">Belgium</string>
    <string name="gc_answer1_2">Austria</string>
    <string name="gc_answer1_3">Germany</string>
    <string name="gc_answer1_4">Italy</string>
    <string name="gc_question2">Does the moon have gravity?</string>
    <string name="gc_answer2_1">Yes</string>
    <string name="gc_answer2_2">No</string>
    <string name="gc_question3">You want to make green paint. Which colors do you mix together?</string>
    <string name="gc_answer3_1">Red and yellow</string>
    <string name="gc_answer3_2">Blue and yellow</string>
    <string name="gc_answer3_3">Orange and purple</string>
    <string name="gc_answer3_4">Blue and red</string>
    <string name="gc_question4">Which is the longest river in the world?</string>
    <string name="gc_answer4_1">Amazon</string>
    <string name="gc_answer4_2">Nile</string>
    <string name="gc_answer4_3">Mississippi</string>
    <string name="gc_answer4_4">Yangtze</string>
    <string name="gc_question5">It takes a bright person to innovate! Who is credited with inventing the lightbulb?</string>
    <string name="gc_answer5_1">Eli whiteny</string>
    <string name="gc_answer5_2">Benjamin Franklin</string>
    <string name="gc_answer5_3">Thomas Edison</string>
    <string name="gc_answer5_4">Issac Newton</string>
    <string name="h_title2">Queen Victoria</string>
    <string name="h_text2">Queen Victoria was formerly the longest-reigning British monarch in history. She was surpassed in 2015 by her great-great-granddaughter and current Queen of England, Elizabeth II. Victoria reigned from 1837 to 1901, assuming the throne at a young age. In the situation where the person ascending to the throne is a minor or is otherwise unable to assume their functions as monarch, the protocol is to have a family member or someone else close to the monarch act as a regent on their behalf.</string>
    <string name="h_question2">For how long did queen victoria ruled britain ?</string>
    <string name="h_answer2_1">60</string>
    <string name="h_answer2_2">63</string>
    <string name="h_answer2_3">59</string>
    <string name="h_answer2_4">67</string>
    <string name="h_title3">Alexander Graham Bell</string>
    <string name="h_text3">Alexander Graham Bell , born March 3 , 1847to Edinburgh in Scotland and died August 2 , 1922at Beinn Bhreagh in Canada , is a Scotto - Canadian scientist , engineer and inventor , naturalized American in 1882, who is best known for the invention of the telephone , for which the anteriority of Antonio Meucci has since been officially recognized the June 11 , 2002by the House of Representatives of the United States . He was awarded the Hughes Medal in 1913 .</string>
    <string name="h_question3">What is the most known invention of Alexander Graham Bell ?</string>
    <string name="h_answer3_1">Micro-wave</string>
    <string name="h_answer3_2">Television</string>
    <string name="h_answer3_3">car</string>
    <string name="h_answer3_4">telephone</string>
    <string name="h_title4">Chernobyl</string>
    <string name="h_text4">The Chernobyl disaster was a nuclear accident that occurred on 26 April 1986 at the No. 4 nuclear reactor in the Chernobyl Nuclear Power Plant, near the city of Pripyat in the north of the Ukrainian SSR.It is considered the worst nuclear disaster in history and is one of only two nuclear energy disasters rated at seven—the maximum severity—on the International Nuclear Event Scale, the other being the 2011 Fukushima Daiichi nuclear disaster in Japan.</string>
    <string name="h_question4">When the Chernobyl accident occurred ?</string>
    <string name="h_answer4_1">1983</string>
    <string name="h_answer4_2">1986</string>
    <string name="h_answer4_3">1990</string>
    <string name="h_answer4_4">1995</string>
    <string name="h_title5">The Wright brothers</string>
    <string name="h_text5">The Wright brothers – Orville (August 19, 1871 – January 30, 1948) and Wilbur (April 16, 1867 – May 30, 1912) – were two American aviation pioneers generally credited[1][2][3] with inventing, building, and flying the world s first successful airplane. They made the first controlled, sustained flight of a powered, heavier-than-air aircraft with the Wright Flyer on December 17, 1903, four miles south of Kitty Hawk, North Carolina. In 1904–05, the brothers developed their flying machine into the first practical fixed-wing aircraft, the Wright Flyer III. Although not the first to build experimental aircraft, the Wright brothers were the first to invent aircraft controls that made fixed-wing powered flight possible.</string>
    <string name="h_question5">When was the first flying plane invented ?</string>
    <string name="h_answer5_1">1903</string>
    <string name="h_answer5_2">1890</string>
    <string name="h_answer5_3">1910</string>
    <string name="h_answer5_4">1906</string>
    <string name="text2">The soccer is one of the most popular sport in world,that contains many Competitions. Teams around the world compete against each the other to receive the highest prize there is "The World Cup". Brazil managed to win this glorious reword five times thanks to their phenomenal player "Pelé" who won the world cup 3 times in a row.Germany and Italy comes up in the second place with four time world cup champions.this photo shows all the world cup final result from 1962 to 2018.</string>
    <string name="title2">Soccer</string>
    <string name="s_question1">What is the most country that reached the World Cup Final and did not win it?</string>
    <string name="s_answer1_1">Brazil</string>
    <string name="s_answer1_2">Netherlands</string>
    <string name="s_answer1_3">England</string>
    <string name="s_answer1_4">France</string>
    <string name="s_title3">Basketball</string>
    <string name="s_text3">An NBA game is 4 quarters of 12 minutes each. However, regulation time is stopped for many aspects of gameplay, like fouls, ball out-of-bounds, timeouts, and a 15-minute halftime. That makes the wall-clock duration of typical games 2-2.5 hours.</string>
    <string name="s_question2">Without overtimes, how many minutes is a regular NBA game?</string>
    <string name="s_answer2_1">60</string>
    <string name="s_answer2_2">43</string>
    <string name="s_answer2_3">48</string>
    <string name="s_answer2_4">40</string>
    <string name="s_title4">Tennis</string>
    <string name="s_text4">It seems pretty clear that of the four tennis Grand Slam events—Wimbledon and the French, Australian and U.S. Opens—the former is by far the most prestigious one. Roger Federer, a six-time winner, has said so. So has reigning men’s champion, Novak Djokovic. Martina Navratilova once said she watched the event when she was 7 years old and knew that someday, she would be there. She won the women’s singles event nine times. Wimbledon is the oldest of the four Grand Slams. It is still played on the sport’s original surface. Players must still wear all-white clothing (though that rule will be temporarily lifted for the tennis events in the 2012 London Olympics, which will be played there.)</string>
    <string name="s_question3">What is the most prestigious prize in tennis ?</string>
    <string name="s_answer3_1">Australian Open</string>
    <string name="s_answer3_2">Wimbledon</string>
    <string name="s_answer3_3">U.S. Open</string>
    <string name="s_answer3_4">French Open</string>
    <string name="congratulation">congratulation! you have finished this chapter</string>
    <string name="corr">correct</string>
    <string name="fal">wrong</string>


</resources>