<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="556dp"
        android:layout_height="844dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_sport1"
        android:contentDescription="@string/desc1"/>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="396dp"
        android:layout_height="336dp"
        android:contentDescription="@string/desc1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/s_img6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="394dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/s_question3"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="343dp"
        android:layout_height="283dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="159dp"
            android:layout_height="189dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button11"
                android:layout_width="155dp"
                android:layout_height="70dp"
                android:layout_marginBottom="16dp"

                android:shadowColor="#00070707"
                android:text="@string/s_answer3_1"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button13"
                android:layout_width="155dp"
                android:layout_height="70dp"

                android:shadowColor="#00070707"
                android:text="@string/s_answer3_2"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="158dp"
            android:layout_height="179dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button5"
                android:layout_width="155dp"
                android:layout_height="70dp"
                android:layout_marginBottom="16dp"

                android:shadowColor="#00070707"
                android:text="@string/s_answer3_3"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="155dp"
                android:layout_height="70dp"

                android:shadowColor="#00070707"
                android:text="@string/s_answer3_4"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>